--- a/scss/pages/_adoptions.scss
+++ b/scss/pages/_adoptions.scss
@@ -4,9 +4,9 @@
   background-size: cover;
   border-bottom: 3px solid white;
   color: white;
-  h1,
-  h2 {
+  h1 {
     padding-top: 5%;
+    margin-bottom: 1%;
   }
   p {
     padding: 1% 3%;
@@ -78,8 +78,8 @@
     border: 0.5px solid white;
     position: relative;
     padding: 0px 10px;
-    h2 {
-      margin: 0;
+    p {
+      margin: 1%;
     }
     ul {
       list-style-type: none;
@@ -166,6 +166,11 @@
 }
 
 @media screen and (min-width: 700px) {
+  .animals {
+    h1 {
+      padding-top: 3%;
+    }
+  }
   .about-adoptions {
     display: grid;
     justify-items: center;
@@ -179,6 +184,9 @@
     margin: 4%;
     .prices {
       margin: 2%;
+      p {
+        margin: 20px;
+      }
       .service-prices-list {
         list-style-type: disc;
         text-align: left;
@@ -199,7 +207,7 @@
     }
   }
   .gallery {
-    h1 {
+    p {
       padding: 2%;
     }
   }
